--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -6,11 +6,11 @@ import servicesData from './Data/services.json';
 <div class="relative flex flex-col items-center md:flex-row" id="services">
     <div class="row items-center py-5 md:pr-20 md:w-3/12 md:py-10">
         <div class="text-center md:text-left space-y-3 bg-lime">
-            <h2 class="text-4xl font-medium leading-none sm:text-6xl">Services</h2>
+            <h2 class="text-4xl font-medium leading-none sm:text-5xl">Services</h2>
         </div>
     </div>
     <div class="flex items-center py-5 md:w-9/12 md:py-10">
-        <p class="text-xl font-normal leading-7 text-center md:text-left">Our digital marketing agency helps businesses grow and succeed online through a range of services including SEO, PPC, social media marketing, and content creation.</p>
+        <p class="text-xl font-normal leading-7 text-center md:text-left">From the exponential growth of renewable energy installations to the reduction of carbon emissions and the economic benefits of clean energy investments, delve into the data shaping our planet's future. Empower yourself with knowledge and insights that highlight the positive impact of embracing green technologies and practices on both local and global scales.</p>
     </div>
 </div>
 
