--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ import Footer from '../components/Footer.astro';
     />
 	<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
   </head>
-  <body class="bg-white font-SpaceGrotesk space-y-20">
+  <body class="bg-white font-HelveticaNeue space-y-20">
     <Navbar />
     <slot />
     <Footer/>
