--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,7 +19,7 @@ import Container from "./Container.astro"
 <div class="relative flex flex-col items-center md:flex-column" id="services">
     <div class="row items-center py-5 md:pr-20 md:w-6/12 md:py-10">
         <div class="text-center space-y-3 bg-lime">
-            <h2 class="text-4xl font-medium leading-none sm:text-5xl">Earth is dying</h2>
+            <h2 class="text-4xl font-medium leading-none sm:text-5xl">We are draining earth</h2>
         </div>
     </div>
 <div class="flex-row items-center">
